# biblioteca-infra

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
nginx/: nginx.conf
