[tool.poetry]
name = "biblioteca-infra"
version = "0.1.0"
description = "Exemplo pra configurar infraestrutura de containers pro projeto demonstrativo de biblioteca"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
